@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.185.2.10 2008/12/12 07:14:11 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.185.2.11 2008/12/15 03:44:22 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -2479,8 +2479,9 @@ show_view()
     }
     fprintf(stderr, "%g rot_x, %g rot_z, %g scale, %g scale_z\n",
 		surface_rot_x, surface_rot_z, surface_scale, surface_zscale);
-    fprintf(stderr,"\t\taxes are %s\n",
-		aspect_ratio_3D == 1.0 ? "on the same scale" : "independently scaled");
+    fprintf(stderr,"\t\t%s axes are %s\n",
+		aspect_ratio_3D == 2 ? "x/y" : aspect_ratio_3D == 3 ? "x/y/z" : "",
+		aspect_ratio_3D >= 2 ? "on the same scale" : "independently scaled");
 }
 
 
